feat: Add component resilience system and auto-install script
- Added automatic component recovery rules to CLAUDE.md
- Updated component guides with missing component handling
- Created check-and-install-components.js script
- Added npm scripts for component checking
- Established style consistency patterns for new components

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "docs:update": "node scripts/update-claude-docs.js",
     "docs:watch": "node scripts/watch-and-update.js",
     "docs:status": "node scripts/watch-and-update.js --status",
-    "dev:docs": "concurrently \"npm run dev\" \"npm run docs:watch\""
+    "dev:docs": "concurrently \"npm run dev\" \"npm run docs:watch\"",
+    "check:components": "node scripts/check-and-install-components.js",
+    "components:install": "node scripts/check-and-install-components.js"
   },
   "keywords": [],
   "author": "",
